--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-# Compiled class file
+bin/
+target/
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
+logs/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -13,11 +9,18 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Eclipse
+.settings/
+*.bak
+.project
+.flattened-pom.xml
+.factorypath
+.classpath
+
+.idea/
+*.iml
