--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 jdk:
-  - openjdk11
+#  - openjdk11
   - openjdk8
 branches:
   only:
@@ -8,3 +8,9 @@ branches:
 
 before_install: 'mvn clean test -Ptest'
 install: 'mvn clean package -Ph2 -Dmaven.test.skip'
+
+deploy:
+  provider: heroku
+  api_key: ...
+  app:
+    master: spring-mvc-start-archetype-dem
