spring-mvc-start-archetype 5.1.6-SNAPSHOT refactor JPA configuration to detect dialect if not set remove maven profile test really use embedded database for unit test

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ jdk:
 branches:
   only:
   - master
-before_install: mvn clean test -Ptest
-install: mvn clean package -Ph2 -Dmaven.test.skip
+install: mvn clean package -Ph2
 deploy:
   provider: heroku
   api_key:
