--- a/pom.xml
+++ b/pom.xml
@@ -367,6 +367,15 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+          <!-- https://github.com/heroku/heroku-maven-plugin -->
+          <groupId>com.heroku.sdk</groupId>
+          <artifactId>heroku-maven-plugin</artifactId>
+          <version>${heroku-maven-plugin.version}</version>
+          <configuration>
+            <appName>spring-mvc-start-demo</appName>
+          </configuration>
+        </plugin>
     </plugins>
   </build>
   <profiles>
