--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <inceptionYear>2019</inceptionYear>
   <properties>
     <java.version>1.8</java.version>
+    <heroku-maven-plugin.version>2.0.6</heroku-maven-plugin.version>
   </properties>
   <dependencies>
     <!-- Spring -->
