--- a/pom.xml
+++ b/pom.xml
@@ -536,6 +536,12 @@
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>${jacoco-maven-plugin.version}</version>
+            <configuration>
+              <excludes>
+                <exclude>**/dto/*</exclude>
+                <exclude>**/entity/*</exclude>
+              </excludes>
+            </configuration>
             <executions>
               <execution>
                 <id>prepare-agent</id>
