WIP: upgrade version to BOM 5.3.2-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   <parent>
     <groupId>com.github.dilbertside</groupId>
     <artifactId>bom</artifactId>
-    <version>5.1.16</version>
-    <relativePath />
+    <version>5.3.2-SNAPSHOT</version>
+    <relativePath/>
   </parent>
   <groupId>com.acme.webapp</groupId>
   <artifactId>webapp</artifactId>
@@ -15,7 +15,9 @@
   <inceptionYear>2019</inceptionYear>
   <properties>
     <heroku-appName>spring-mvc-start-demo</heroku-appName>
-    <java.version>1.8</java.version>
+    <java.version>17</java.version>
+    <management.port>9090</management.port>
+    <server.port>8080</server.port>
   </properties>
   <dependencies>
     <dependency>
@@ -59,6 +61,11 @@
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
     </dependency>
+    <!-- Persistence -->
+    <dependency>
+      <groupId>javax.el</groupId>
+      <artifactId>javax.el-api</artifactId>
+    </dependency>
     <!-- @Inject -->
     <dependency>
       <groupId>javax.inject</groupId>
@@ -86,9 +93,9 @@
     </dependency>
     <!-- Avoid: javax.validation.ValidationException: HV000183: Unable to load 'javax.el.ExpressionFactory' -->
     <dependency>
-      <groupId>org.glassfish.web</groupId>
-      <artifactId>el-impl</artifactId>
-      <scope>provided</scope>
+      <groupId>org.glassfish</groupId>
+      <artifactId>jakarta.el</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
@@ -100,15 +107,14 @@
       <artifactId>hamcrest-library</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- Persistence -->
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
       <!-- Avoid issue #72 Could not initialize class org.thymeleaf.templateresolver.ServletContextTemplateResolver due to 'validation is not supported' -->
       <exclusions>
         <exclusion>
-          <artifactId>pull-parser</artifactId>
           <groupId>pull-parser</groupId>
+          <artifactId>pull-parser</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -118,11 +124,11 @@
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-java8</artifactId>
+      <artifactId>hibernate-hikaricp</artifactId>
     </dependency>
     <!-- Validation -->
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
     </dependency>
     <dependency>
@@ -140,6 +146,10 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver-sync</artifactId>
     </dependency>
     <dependency>
       <groupId>org.objenesis</groupId>
@@ -211,8 +221,8 @@
       <artifactId>thymeleaf-spring5</artifactId>
       <exclusions>
         <exclusion>
-          <artifactId>javassist</artifactId>
           <groupId>org.javassist</groupId>
+          <artifactId>javassist</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -336,7 +346,7 @@
       <properties>
         <!-- to run locally use docker: docker run - -name maildev -p 1080:80 -d -p 1025:25 djfarrelly/maildev -->
         <mail.smtp.host>localhost</mail.smtp.host>
-        <mail.smtp.password />
+        <mail.smtp.password/>
         <mail.smtp.port>1025</mail.smtp.port>
         <profile.build>dev</profile.build>
         <spring.profiles.active>dev</spring.profiles.active>
@@ -349,7 +359,7 @@
       </activation>
       <properties>
         <dataSource.driverClassName>org.h2.Driver</dataSource.driverClassName>
-        <dataSource.password />
+        <dataSource.password/>
         <dataSource.url>jdbc:h2:mem:webapp</dataSource.url>
         <dataSource.username>sa</dataSource.username>
         <hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
@@ -372,7 +382,7 @@
       </activation>
       <properties>
         <dataSource.driverClassName>org.hsqldb.jdbcDriver</dataSource.driverClassName>
-        <dataSource.password />
+        <dataSource.password/>
         <dataSource.url>jdbc:hsqldb:mem:webapp</dataSource.url>
         <dataSource.username>sa</dataSource.username>
         <hibernate.dialect>org.hibernate.dialect.HSQLDialect</hibernate.dialect>
@@ -412,6 +422,32 @@
       </dependencies>
     </profile>
     <profile>
+      <id>oracle</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <dataSource.driverClassName>oracle.jdbc.OracleDriver</dataSource.driverClassName>
+        <dataSource.password>john</dataSource.password>
+        <dataSource.url>jdbc:oracle:thin:@10.0.0.1:1521:scott</dataSource.url>
+        <dataSource.username>USER_PRODUCTION</dataSource.username>
+        <hibernate.create_database_schemas>false</hibernate.create_database_schemas>
+        <hibernate.create_namespaces>false</hibernate.create_namespaces>
+        <hibernate.dialect>org.hibernate.dialect.Oracle12cDialect</hibernate.dialect>
+        <hibernate.format_sql>false</hibernate.format_sql>
+        <hibernate.hbm2ddl.auto>none</hibernate.hbm2ddl.auto>
+        <hibernate.show_sql>false</hibernate.show_sql>
+        <hibernate.use_sql_comments>false</hibernate.use_sql_comments>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>com.oracle</groupId>
+          <artifactId>ojdbc7</artifactId>
+          <version>${ojdbc7.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
       <id>mysql</id>
       <activation>
         <activeByDefault>false</activeByDefault>
@@ -444,7 +480,7 @@
           <plugin>
             <groupId>com.spotify</groupId>
             <artifactId>dockerfile-maven-plugin</artifactId>
-            <version>${dockerfile-maven-plugin.version}</version>
+            <version>${maven-dockerfile-plugin.version}</version>
           </plugin>
         </plugins>
       </build>
@@ -460,16 +496,11 @@
             <!-- https://github.com/GoogleContainerTools/jib/tree/master/jib-maven-plugin#quickstart -->
             <groupId>com.google.cloud.tools</groupId>
             <artifactId>jib-maven-plugin</artifactId>
-            <version>${jib-maven-plugin.version}</version>
-            <executions>
-              <execution>
-                <phase>install</phase>
-                <goals>
-                  <goal>build</goal>
-                </goals>
-              </execution>
-            </executions>
+            <version>${maven-jib-plugin.version}</version>
             <configuration>
+              <from>
+                <image>openjdk:alpine</image>
+              </from>
               <to>
                 <image>${project.artifactId}:${project.version}-${profile.build}</image>
               </to>
@@ -481,9 +512,17 @@
                   <JAVA_TOOL_OPTIONS>-Djava.security.egd=file:/dev/./urandom -Xms256m -Xmx512m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</JAVA_TOOL_OPTIONS>
                   <TZ>${docker.image.tz}</TZ>
                 </environment>
-                <useCurrentTimestamp>true</useCurrentTimestamp>
+                <creationTime>EPOCH</creationTime>
               </container>
             </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+                <phase>install</phase>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
@@ -501,7 +540,7 @@
               <maxmem>256m</maxmem>
               <!-- aggregated reports for multi-module projects -->
               <aggregate>true</aggregate>
-              <check />
+              <check/>
             </configuration>
           </plugin>
           <plugin>
@@ -516,6 +555,12 @@
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>${jacoco-maven-plugin.version}</version>
+            <configuration>
+              <excludes>
+                <exclude>**/dto/*</exclude>
+                <exclude>**/entity/*</exclude>
+              </excludes>
+            </configuration>
             <executions>
               <execution>
                 <id>prepare-agent</id>
@@ -524,12 +569,6 @@
                 </goals>
               </execution>
             </executions>
-            <configuration>
-              <excludes>
-                <exclude>**/dto/*</exclude>
-                <exclude>**/entity/*</exclude>
-              </excludes>
-            </configuration>
           </plugin>
         </plugins>
       </build>
