--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -6,5 +6,6 @@ mail.host=${mail.smtp.host}
 mail.port=${mail.smtp.port}
 mail.username=${mail.smtp.user}
 mail.password=${mail.smtp.password}
-mail.adress.from=customer.care@example.com
+mail.from=customer.care@example.com
 mail.recipient=test@example.com
+mail.cc=
